# VerdaTraceAI

./: .firebaserc  .gitignore  ACCESSIBILITY.md  ARCHITECTURE.md  CODE_QUALITY.md  CONTRIBUTING.md  EVALS.md  LICENSE  PROBLEM_ALIGNMENT.md  README.md  SECURITY.md  deployment.yaml
.github/workflows/: ci.yml  security_audit.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: api.py  config.py  evals.py  exceptions.py  main.py
backend/app/agents/: adk_core.py  orchestrator.py  specialists.py
backend/app/agents/specialists/: __init__.py  core_agents.py  rag_agents.py  scope3_agents.py  security_agents.py
backend/app/models/: project.py
backend/app/services/: database.py  llm_service.py
backend/tests/: test_agent_branches.py  test_agents.py  test_api.py  test_evals.py  test_llm_service.py
backend/tests/agent/: test_evals.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_agent_branches.py  test_coverage_gaps.py  test_emission_formulas.py  test_llm_service.py  test_perfect_coverage.py
docs/: DEMO.md  EVALUATION.md  PROMPTS.md
frontend/: .env.production  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  config.ts  index.css
frontend/src/components/: AgentPipeline.tsx  CircularEconomyView.tsx  CopilotView.tsx  DashboardView.tsx  DigitalFootprintView.tsx  FoodMilesView.tsx  JudgeView.tsx  LifestyleView.tsx  LocalCommerceView.tsx  RecommendationsView.tsx  Sidebar.tsx  SimulatorView.tsx  TransitInfraView.tsx
frontend/src/i18n/: index.ts  labels.ts  schema.ts  translations.ts
frontend/src/tests/: AgentPipeline.test.tsx  CircularEconomyView.test.tsx  CopilotView.test.tsx  DashboardView.test.tsx  DigitalFootprintView.test.tsx  FoodMilesView.test.tsx  setup.ts  (+8 more)
infra/: Dockerfile.backend  Dockerfile.frontend  README.md  deploy_cloud_run.ps1  deploy_cloud_run.sh
mcp/: manifest.json  server.py
scripts/: run_local.ps1  run_local.sh
(+14 files in other folders)
